--- a/client/src/pages/styles.css
+++ b/client/src/pages/styles.css
@@ -32,7 +32,6 @@ section.side {
 }
 
 .login-container{
-    background-color: beige;
     max-width: 450px;
     padding: 24px;
     display: flex;
@@ -90,6 +89,7 @@ section.side {
 }
 
 input, button {
+    background-color: transparent;
     border: none;
     outline: none;
     border-radius: 30px;
@@ -118,6 +118,47 @@ button.submit {
 
 button.submit:hover {
     opacity:0.9;
+}
+
+.user {
+    text-transform: capitalize;
+    font-weight: bold;
+} 
+
+.teams {
+    text-transform: uppercase;
+    margin: 5px;
+    padding: 5px;
+    font-size: 2em;
+}
+
+.score {
+    margin: 10px;
+    padding: 10px;
+    font-size: 2em;
+}
+
+.score-number{
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.small-print{
+    font-size: 0.7em;
+}
+
+.pages{
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.btn-page {
+    font-size: 2em;
+}
+
+.btn-page:disabled{
+    opacity: 50%;
 }
 
 /* RESPONSIVE  */
