--- a/client/src/pages/styles.css
+++ b/client/src/pages/styles.css
@@ -174,6 +174,10 @@ button.submit:hover {
     padding-top: 50px
 }
 
+.scorebox{
+    padding: 20px;
+}
+
 /* RESPONSIVE  */
 
 @media (max-width: 780px) {
