--- a/client/src/pages/styles.css
+++ b/client/src/pages/styles.css
@@ -49,13 +49,23 @@ section.side {
 
 }
 
+.results-title {
+    margin-top: 100px;
+    padding: 10px;
+    text-transform: uppercase;
+    font-size: 2em;
+    font-weight: bold;
+    text-align: center;
+    letter-spacing: 1px;
+
+}
 .separator {
+    display: inline-block;
     width: 150px;
     height: 4px;
     background-color: blue;
     margin: 24px;
 }
-
 .welcome-message {
     text-align: center;
     font-size: 1.1em;
@@ -130,13 +140,13 @@ button.submit:hover {
     text-transform: uppercase;
     margin: 5px;
     padding: 5px;
-    font-size: 2em;
+    font-size: 1.5em;
 }
 
 .score {
     margin: 10px;
     padding: 10px;
-    font-size: 2em;
+    font-size: 1.5em;
 }
 
 .score-number{
