--- a/client/src/pages/styles.css
+++ b/client/src/pages/styles.css
@@ -122,6 +122,28 @@ button.submit:hover {
     opacity:0.9;
 }
 
+p.btn {
+    padding: 10px;
+}
+
+button.user-btn {
+    color: #fff;
+    align-items: center;
+    padding: 10px 10px;
+    width: 180px;
+    text-transform: lowercase;
+    /* letter-spacing: 2px; */
+    font-weight: bold;
+    background-color: black;
+    cursor: pointer;
+    transition: opacity 0.4s;
+    text-align: center;
+}
+
+button.user-btn:hover {
+    opacity: 0.7;
+}
+
 .user {
     text-transform: capitalize;
     font-weight: bold;
