--- a/client/src/components/CardLeader/CardLeader.css
+++ b/client/src/components/CardLeader/CardLeader.css
@@ -22,13 +22,21 @@
 }
 
 /* radial bar */
-.radialBar {
+.radialBarTable {
     flex: 1 1;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     gap: 1rem;
+}
+
+.radialBarTable>p {
+    font-family: 'Inter', sans-serif;
+    font-size: 12px;
+    color: white;
+    padding-top: 0px;
+    background-color: black;
 }
 
 .CircularProgressbar {
