--- a/client/src/components/Updates/Updates.css
+++ b/client/src/components/Updates/Updates.css
@@ -1,6 +1,6 @@
 .Updates{
     width: 85%;
-    background-color: white;
+    background-color: #000000;
     border-radius: 0.7rem;
     padding: 1rem;
     gap: 1rem;
