corrects layout in mobile (parentcontainer 18rem in cards.css)

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,7 +23,7 @@
     align-items: center;
   }
 
-  body {
+body {
   font-family: 'Inter', sans-serif;
   background-color: var(--lavender-web)
 }
@@ -36,6 +36,7 @@
   background-color: var(--french-gray);
   overflow: hidden;
   grid-template-columns: 11rem auto 20rem;
+  gap: 16px;
 }
 
 @media screen and (max-width: 1200px) {
@@ -49,7 +50,7 @@
   .AppGlass {
     grid-template-columns: 1fr;
   }
-  .AppGlass::-webkit-scrollbar{
+  /* .AppGlass::-webkit-scrollbar{
     display: none;
-  }
+  } */
 }
