implements new dashboard - expanded cards and sidebar menu removed temp

--- a/client/src/components/cards/Card/Card.css
+++ b/client/src/components/cards/Card/Card.css
@@ -36,18 +36,20 @@
 }
 
 .CircularProgressbar-path {
-    stroke: white !important;
-    stroke-width: 12px !important;
-    filter: drop-shadow(2px 4px 6px white);
+    stroke: black !important;
+    stroke-width: 10px !important;
+    /* filter: drop-shadow(2px 4px 6px white); */
 }
 
 .CircularProgressbar-trail {
-    display: none;
+    stroke: lightgrey !important;
+    stroke-width: 10px;
 }
 
 .CircularProgressbar-text {
     fill: white !important;
 }
+
 
 .radialBar>span {
     font-size: 17px;
