--- a/client/src/components/Table/Table.css
+++ b/client/src/components/Table/Table.css
@@ -1,11 +1,16 @@
 
 .TableContainer{
     margin-top: 20px;
-    display: grid;
+    display: flex;
     width: 100%;
     gap: 10px;
     border-radius: 0.7rem;
     grid-template-columns: 1fr 1fr;
+}
+
+.Table>h3{
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .Table{
@@ -40,17 +45,20 @@
 
 @media screen and (max-width: 1200px) {
     .Table{
-        width: 170%;
+        width: 100%;
         margin-top: 2rem;
     }
 }
 
 @media screen and (max-width: 768px) {
+    .TableContainer {
+            flex-wrap: wrap;
+        }
     .Table{
         position: relative;
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 18rem;
+        width: 100%;
     }
 }
