--- a/client/src/components/Updates/Updates.css
+++ b/client/src/components/Updates/Updates.css
@@ -1,5 +1,5 @@
 .Updates{
-    width: 85%;
+    width: 95%;
     background-color: #000000;
     border-radius: 0.7rem;
     padding: 1rem;
@@ -12,4 +12,11 @@
 .update{
     display: flex;
     gap: 0.5rem;
+}
+
+
+@media screen and (max-width: 768px) {
+    .Update {
+        width: 50%;
+    }
 }
