--- a/client/src/components/sidebar/Sidebar.css
+++ b/client/src/components/sidebar/Sidebar.css
@@ -80,9 +80,12 @@
 
 @media screen and (max-width: 768px) {
     .Sidebar {
+        display: none;
+        /* GETS RID OF THE SIDEBAR FOR NOW */
+       
         position: fixed;
         z-index: 9;
-        background: #ffe0e0;
+        background: var(--lavender-web);
         width: 55%;
         padding-right: 1rem;
         height: 100%;
@@ -105,7 +108,7 @@
     top: 2rem;
     left: 60%;
     z-index: 9;
-    background: #ffe0e0;
+    background: var(--lavender-web);
     padding: 10px;
     border-radius: 10px;
 }
