adjustments in dashboard CSS to align flex boxes

--- a/client/src/components/maindash/MainDash.css
+++ b/client/src/components/maindash/MainDash.css
@@ -5,6 +5,8 @@
     padding: 50px;
 }
 
+.MainDash>h1{padding-bottom: 15px;}
+
 @media screen and (max-width: 1200px) {
     .MainDash {
         justify-content: flex-start;
@@ -15,5 +17,6 @@
 @media screen and (max-width: 768px) {
     .MainDash{
         align-items: center;
+        width: 100vw;
     }
 }
