--- a/client/src/components/sidebar/Sidebar.css
+++ b/client/src/components/sidebar/Sidebar.css
@@ -103,7 +103,8 @@
     }
 
 .bars{
-    display: flex;
+    /* display: flex; */
+    display: none;
     position: fixed;
     top: 2rem;
     left: 60%;
