--- a/client/src/NEW_features/styles.css
+++ b/client/src/NEW_features/styles.css
@@ -16,6 +16,9 @@
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 
+.next-match-main {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
 .grid-title {
     background-color: bisque;
     padding: 15px;
@@ -31,6 +34,10 @@
     grid-column-end: 7;
 }
 
+.next-match-grid-title {
+    grid-column-start: 1;
+    grid-column-end: 6;
+}
 .grid-child{
     padding: 15px;
     height: 100%;
