--- a/client/src/NEW_features/styles.css
+++ b/client/src/NEW_features/styles.css
@@ -9,15 +9,15 @@
 }
 
 .leaderboard-main {
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 3fr 3fr;
 }
 
 .last-match-main {
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 2fr 2fr 1fr 1fr 2fr 2fr;
 }
 
 .next-match-main {
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 2fr 2fr 1fr 1fr 2fr;
 }
 .grid-title {
     background-color: bisque;
@@ -39,7 +39,34 @@
     grid-column-end: 6;
 }
 .grid-child{
-    padding: 15px;
+    padding: 5px;
     height: 100%;
     background-color: azure;
+}
+
+.bottom-buttons{
+    display: flex;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 15vh;
+    justify-content: space-around;
+    font-size: 30px;
+}
+
+.button{
+    all: unset;
+    cursor: pointer;
+    opacity: 100%;
+}
+
+.disabled{
+    all: unset;
+    opacity: 40%;
+}
+
+@media only screen and (max-width: 1024px){
+    .grid-child{
+        font-size: 0.7rem;
+    }
 }
